--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -5,10 +5,32 @@
 {% block content %}
     <h1>Contacts</h1>
     <ul>
-        <li><a href="https://github.com/kirillyat">GitHub</a></li>
-        <li><a href="https://t.me/kirillyat">Telegram</a></li>
-        <li><a href="https://www.linkedin.com/in/kirillyat/"><i class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></i></a></li>
-        <li><a href="https://twitter.com/kirillyat">Twitter</a></li>
-        <li><a href="https://www.instagram.com/kirillyat/">Instagram</a></li>
+        <li class="d-inline-block me-2">
+            <a href="https://github.com/kirillyat" class="link-body-emphasis">
+                <i class="bi bi-github fa-2x" style="color: #000000;"></i>
+            </a>
+        </li>
+        <li class="d-inline-block me-2">
+            <a href="https://t.me/kirillyat" class="link-body-emphasis">
+                <i class="bi bi-telegram fa-2x" style="color: #0088cc;"></i>
+            </a>
+        </li>
+        <li class="d-inline-block me-2">
+            <a href="https://www.linkedin.com/in/kirillyat/" class="link-body-emphasis">
+                <i class="bi bi-linkedin fa-2x" style="color: #0077b5;"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                </svg>
+            </a>
+        </li>
+        <li class="d-inline-block me-2">
+            <a href="https://twitter.com/kirillyat" class="link-body-emphasis">
+                <i class="bi bi-twitter fa-2x" style="color: #1da1f2;"></i>
+            </a>
+        </li>
+        <li class="d-inline-block me-2">
+            <a href="https://www.instagram.com/kirillyat/" class="link-body-emphasis">
+                <i class="bi bi-instagram fa-2x" style="color: #e1306c;"></i>
+            </a>
+        </li>
     </ul>
 {% endblock %}
